--- a/DuxTeam/DuxTeam/MainPage.xaml
+++ b/DuxTeam/DuxTeam/MainPage.xaml
@@ -3,9 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:DuxTeam"
              x:Class="DuxTeam.MainPage">
+    <StackLayout>
+        <Button Text = "Нажми!" Margin="50"  FontSize="Large" BorderWidth="1"
+        HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
+        Clicked="OnButtonClicked" />
 
-	<Label Text="Welcome to Xamarin Forms!" 
+        <Label Text="Welcome to Xamarin Forms!" Margin="50" 
            VerticalOptions="Center" 
            HorizontalOptions="Center" />
+    </StackLayout>
+    
 
 </ContentPage>
